css > body overflow change from "hidden" to auto. now we can see whole web-site page including footer, but some block going a bit right side. will fix tomorrow.

--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -10,7 +10,9 @@ body {
     background: linear-gradient(135deg, #8000ff 0%, #60acff 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    overflow: hidden;
+    overflow: auto;
+
+
 }
 a{
     color: snow;
